[gd_scene load_steps=19 format=3 uid="uid://xr6akooiqbee"]

[ext_resource type="Script" uid="uid://dcxy0vxwon3oa" path="res://game_manager.gd" id="1_vt4to"]
[ext_resource type="AudioStream" uid="uid://dp2ckqubu7iaw" path="res://sounds/collection.mp3" id="2_3pl1t"]
[ext_resource type="AudioStream" uid="uid://ciy2r1q3t70nj" path="res://sounds/main_song.mp3" id="3_qcqi3"]
[ext_resource type="AudioStream" uid="uid://c8fsxcrte8rxn" path="res://sounds/end.mp3" id="4_kmqas"]
[ext_resource type="AudioStream" uid="uid://dcnqcxolul1q8" path="res://sounds/smb_jump-small.mp3" id="5_xiiio"]
[ext_resource type="AudioStream" uid="uid://ct6u44xbydi2" path="res://sounds/smb_jump-super.mp3" id="6_2gkne"]
[ext_resource type="AudioStream" uid="uid://6mg8v5bc1uas" path="res://sounds/pain.mp3" id="7_1mci1"]
[ext_resource type="AudioStream" uid="uid://dqwqtf64m6f0b" path="res://sounds/lose.mp3" id="8_47yom"]
[ext_resource type="Texture2D" uid="uid://coe3tcxmrup6e" path="res://background/Brown.png" id="9_jb1uw"]
[ext_resource type="Texture2D" uid="uid://ds8jtr1d7q2gr" path="res://Terrain (16x16).png" id="10_vrigc"]
[ext_resource type="PackedScene" uid="uid://bvtbp8dg7u6ee" path="res://scenes/main_character.tscn" id="11_p0iup"]
[ext_resource type="FontFile" uid="uid://by3ufvfs0ni3g" path="res://background/GAMERIA.ttf" id="12_shuu0"]
[ext_resource type="PackedScene" uid="uid://cm37tklqhxobv" path="res://scenes/collectable_apple.tscn" id="13_6pt6s"]
[ext_resource type="PackedScene" uid="uid://wfh6ua2stjsi" path="res://scenes/pause_menu.tscn" id="20_sqqna"]
[ext_resource type="PackedScene" uid="uid://b5e630ypq7lua" path="res://scenes/lose_menu.tscn" id="21_sdege"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_tda05"]
texture = ExtResource("10_vrigc")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:0/0 = 0
6:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:0/0 = 0
7:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:0/0 = 0
8:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:0/0 = 0
9:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:0/0 = 0
10:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:0/0 = 0
12:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:0/0 = 0
13:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
14:0/0 = 0
14:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:0/0 = 0
15:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
17:0/0 = 0
17:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
18:0/0 = 0
18:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
19:0/0 = 0
19:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:1/0 = 0
2:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:1/0 = 0
3:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:1/0 = 0
4:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:1/0 = 0
6:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:1/0 = 0
7:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:1/0 = 0
8:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:1/0 = 0
9:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:1/0 = 0
10:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:1/0 = 0
12:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:1/0 = 0
13:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
14:1/0 = 0
14:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:1/0 = 0
15:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
17:1/0 = 0
17:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
18:1/0 = 0
18:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
19:1/0 = 0
19:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0 = 0
1:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:2/0 = 0
2:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:2/0 = 0
6:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:2/0 = 0
7:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:2/0 = 0
8:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:2/0 = 0
13:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
14:2/0 = 0
14:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:2/0 = 0
15:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
17:2/0 = 0
17:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
18:2/0 = 0
18:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
19:2/0 = 0
19:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:4/0 = 0
0:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:4/0 = 0
1:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:4/0 = 0
2:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:4/0 = 0
3:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:4/0 = 0
4:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:4/0 = 0
6:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:4/0 = 0
7:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:4/0 = 0
8:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:4/0 = 0
9:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:4/0 = 0
10:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:4/0 = 0
12:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:4/0 = 0
13:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
14:4/0 = 0
14:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:4/0 = 0
15:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
17:4/0 = 0
17:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
18:4/0 = 0
18:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
19:4/0 = 0
19:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
20:4/0 = 0
20:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
21:4/0 = 0
21:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:5/0 = 0
0:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:5/0 = 0
1:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:5/0 = 0
2:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:5/0 = 0
3:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:5/0 = 0
4:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:5/0 = 0
6:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:5/0 = 0
7:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:5/0 = 0
8:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:5/0 = 0
9:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:5/0 = 0
10:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:5/0 = 0
12:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:5/0 = 0
13:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
14:5/0 = 0
14:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:5/0 = 0
15:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
17:5/0 = 0
17:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
18:5/0 = 0
18:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
19:5/0 = 0
19:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
20:5/0 = 0
20:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
21:5/0 = 0
21:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:6/0 = 0
0:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:6/0 = 0
1:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:6/0 = 0
2:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:6/0 = 0
6:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:6/0 = 0
7:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:6/0 = 0
8:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:6/0 = 0
13:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
14:6/0 = 0
14:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:6/0 = 0
15:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
17:6/0 = 0
17:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
18:6/0 = 0
18:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
19:6/0 = 0
19:6/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:8/0 = 0
0:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:8/0 = 0
1:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:8/0 = 0
2:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:8/0 = 0
3:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:8/0 = 0
4:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:8/0 = 0
6:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:8/0 = 0
7:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:8/0 = 0
8:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:8/0 = 0
9:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:8/0 = 0
10:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:8/0 = 0
12:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:8/0 = 0
13:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
14:8/0 = 0
14:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:8/0 = 0
15:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
17:8/0 = 0
17:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
18:8/0 = 0
18:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
19:8/0 = 0
19:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
20:8/0 = 0
20:8/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:9/0 = 0
0:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:9/0 = 0
1:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:9/0 = 0
2:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:9/0 = 0
3:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:9/0 = 0
4:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:9/0 = 0
6:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:9/0 = 0
7:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:9/0 = 0
8:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:9/0 = 0
9:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:9/0 = 0
10:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:9/0 = 0
12:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:9/0 = 0
13:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
14:9/0 = 0
14:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:9/0 = 0
15:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
17:9/0 = 0
17:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
18:9/0 = 0
18:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
19:9/0 = 0
19:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
20:9/0 = 0
20:9/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
0:10/0 = 0
0:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:10/0 = 0
1:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:10/0 = 0
2:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
6:10/0 = 0
6:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:10/0 = 0
7:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
8:10/0 = 0
8:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:10/0 = 0
13:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
14:10/0 = 0
14:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
15:10/0 = 0
15:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
18:10/0 = 0
18:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
19:10/0 = 0
19:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
20:10/0 = 0
20:10/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)

[sub_resource type="TileSet" id="TileSet_qn3nj"]
physics_layer_0/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_tda05")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_airu1"]

[node name="Node" type="Node"]

[node name="GameManager" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("1_vt4to")

[node name="CollectionsSound" type="AudioStreamPlayer" parent="GameManager"]
stream = ExtResource("2_3pl1t")

[node name="MainSound" type="AudioStreamPlayer" parent="GameManager"]
stream = ExtResource("3_qcqi3")
volume_db = -6.0
autoplay = true
parameters/looping = true

[node name="EndSound" type="AudioStreamPlayer" parent="GameManager"]
stream = ExtResource("4_kmqas")

[node name="JumpSound" type="AudioStreamPlayer" parent="GameManager"]
stream = ExtResource("5_xiiio")

[node name="DoubleJumbSound" type="AudioStreamPlayer" parent="GameManager"]
stream = ExtResource("6_2gkne")

[node name="HurtSound" type="AudioStreamPlayer" parent="GameManager"]
stream = ExtResource("7_1mci1")

[node name="LoseSound" type="AudioStreamPlayer" parent="GameManager"]
process_mode = 3
stream = ExtResource("8_47yom")

[node name="SceneObjects" type="Node" parent="."]

[node name="TextureRect" type="TextureRect" parent="SceneObjects"]
texture_filter = 1
offset_right = 2292.0
offset_bottom = 639.0
texture = ExtResource("9_jb1uw")
stretch_mode = 1

[node name="TileMap" type="TileMap" parent="SceneObjects"]
texture_filter = 1
scale = Vector2(2, 2)
tile_set = SubResource("TileSet_qn3nj")
format = 2
layer_0/tile_data = PackedInt32Array(1245184, 0, 6, 1245185, 65536, 6, 1245186, 65536, 6, 1245187, 65536, 6, 1245188, 65536, 6, 1245189, 65536, 6, 1245190, 65536, 6, 1245191, 65536, 6, 1245192, 65536, 6, 1245193, 65536, 6, 1245194, 65536, 6, 1245195, 65536, 6, 1245196, 65536, 6, 1245197, 65536, 6, 1245198, 65536, 6, 1245199, 65536, 6, 1245200, 65536, 6, 1245201, 65536, 6, 1245202, 65536, 6, 1245203, 65536, 6, 1245204, 65536, 6, 1245205, 65536, 6, 1245206, 65536, 6, 1245207, 65536, 6, 1245208, 65536, 6, 1245209, 65536, 6, 1245210, 65536, 6, 1245211, 65536, 6, 1245212, 65536, 6, 1245213, 65536, 6, 1245214, 65536, 6, 1245215, 65536, 6, 1245216, 65536, 6, 1245217, 65536, 6, 1245218, 65536, 6, 1245219, 65536, 6, 1245220, 65536, 6, 1245221, 65536, 6, 1245222, 65536, 6, 1245223, 65536, 6, 1245224, 65536, 6, 1245225, 65536, 6, 1245226, 65536, 6, 1245227, 65536, 6, 1245228, 65536, 6, 1245229, 65536, 6, 1245230, 65536, 6, 1245231, 65536, 6, 1245232, 65536, 6, 1245233, 65536, 6, 1245234, 65536, 6, 1245235, 65536, 6, 1245236, 65536, 6, 1245237, 65536, 6, 1245238, 65536, 6, 1245239, 65536, 6, 1245240, 65536, 6, 1245241, 65536, 6, 1245242, 65536, 6, 1245243, 65536, 6, 1245244, 65536, 6, 1245245, 65536, 6, 1245246, 65536, 6, 1245247, 65536, 6, 1245248, 65536, 6, 1245249, 65536, 6, 1245250, 65536, 6, 1245251, 65536, 6, 1245252, 65536, 6, 1245253, 65536, 6, 1245254, 65536, 6, 1245255, 131072, 6, 1179719, 131072, 5, 1114183, 131072, 5, 1048647, 131072, 5, 983111, 131072, 5, 917575, 131072, 5, 852039, 131072, 5, 786503, 131072, 5, 720967, 131072, 5, 655431, 131072, 5, 589895, 131072, 5, 524359, 131072, 5, 458823, 131072, 5, 393287, 131072, 5, 327751, 131072, 5, 262215, 131072, 5, 196679, 131072, 5, 131143, 131072, 5, 65607, 131072, 5, 71, 131072, 4, 70, 65536, 4, 69, 65536, 4, 68, 65536, 4, 67, 65536, 4, 66, 65536, 4, 65, 65536, 4, 64, 65536, 4, 63, 65536, 4, 62, 65536, 4, 61, 65536, 4, 60, 65536, 4, 59, 65536, 4, 58, 65536, 4, 57, 65536, 4, 56, 65536, 4, 55, 65536, 4, 54, 65536, 4, 53, 65536, 4, 52, 65536, 4, 51, 65536, 4, 50, 65536, 4, 49, 65536, 4, 48, 65536, 4, 47, 65536, 4, 46, 65536, 4, 45, 65536, 4, 44, 65536, 4, 43, 65536, 4, 42, 65536, 4, 41, 65536, 4, 40, 65536, 4, 39, 65536, 4, 38, 65536, 4, 37, 65536, 4, 36, 65536, 4, 35, 65536, 4, 34, 65536, 4, 33, 65536, 4, 32, 65536, 4, 31, 65536, 4, 30, 65536, 4, 29, 65536, 4, 28, 65536, 4, 27, 65536, 4, 26, 65536, 4, 25, 65536, 4, 24, 65536, 4, 23, 65536, 4, 22, 65536, 4, 21, 65536, 4, 20, 65536, 4, 19, 65536, 4, 18, 65536, 4, 17, 65536, 4, 16, 65536, 4, 15, 65536, 4, 14, 65536, 4, 13, 65536, 4, 12, 65536, 4, 11, 65536, 4, 10, 65536, 4, 9, 65536, 4, 8, 65536, 4, 7, 65536, 4, 6, 65536, 4, 5, 65536, 4, 4, 65536, 4, 3, 65536, 4, 2, 65536, 4, 1, 65536, 4, 0, 0, 4, 65536, 0, 5, 131072, 0, 5, 196608, 0, 5, 262144, 0, 5, 327680, 0, 5, 393216, 0, 5, 458752, 0, 5, 524288, 0, 5, 589824, 0, 5, 655360, 0, 5, 720896, 0, 5, 786432, 0, 5, 851968, 0, 5, 917504, 0, 5, 983040, 0, 5, 1048576, 0, 5, 1114112, 0, 5, 1179648, 0, 5, 1179652, 458752, 4, 1179653, 458752, 4, 1179654, 458752, 4, 1179658, 458752, 4, 1179659, 458752, 4, 1179660, 458752, 4, 1179651, 458752, 4, 1179650, 458752, 4, 1179649, 458752, 4, 1179655, 458752, 4, 1179656, 458752, 4, 1179657, 458752, 4, 1179661, 458752, 4, 1179662, 458752, 4, 1179663, 458752, 4, 1179664, 458752, 4, 1179665, 458752, 4, 1179666, 458752, 4, 1179667, 458752, 4, 1179668, 458752, 4, 1179669, 458752, 4, 1179670, 458752, 4, 1179671, 458752, 4, 1179672, 458752, 4, 1179673, 458752, 4, 1179674, 458752, 4, 1179675, 458752, 4, 1179676, 458752, 4, 1179677, 458752, 4, 1179678, 458752, 4, 1179679, 458752, 4, 1179680, 458752, 4, 1179681, 458752, 4, 1179682, 458752, 4, 1179683, 458752, 4, 1179684, 458752, 4, 1179685, 458752, 4, 1179686, 458752, 4, 1179687, 458752, 4, 1179688, 458752, 4, 1179689, 458752, 4, 1179690, 458752, 4, 1179691, 458752, 4, 1179692, 458752, 4, 1179693, 458752, 4, 1179694, 458752, 4, 1179695, 458752, 4, 1179696, 458752, 4, 1179697, 458752, 4, 1179698, 458752, 4, 1179699, 458752, 4, 1179700, 458752, 4, 1179701, 458752, 4, 1179702, 458752, 4, 1179703, 458752, 4, 1179704, 458752, 4, 1179705, 458752, 4, 1179706, 458752, 4, 1179707, 458752, 4, 1179708, 458752, 4, 1179709, 458752, 4, 1179710, 458752, 4, 1179711, 458752, 4, 1179712, 458752, 4, 1179713, 458752, 4, 1179714, 458752, 4, 1179715, 458752, 4, 1179716, 458752, 4, 1179717, 458752, 4, 1179718, 458752, 4)

[node name="CharacterBody2D" parent="SceneObjects" instance=ExtResource("11_p0iup")]
position = Vector2(138, 511)

[node name="Camera2D" type="Camera2D" parent="SceneObjects/CharacterBody2D"]
position = Vector2(7, 8)
position_smoothing_enabled = true

[node name="ClollectablesNode" type="Node" parent="SceneObjects"]

[node name="Traps" type="Node" parent="SceneObjects"]

[node name="UI" type="CanvasLayer" parent="."]

[node name="Panel" type="Panel" parent="UI"]
offset_left = 35.0
offset_top = 35.0
offset_right = 163.0
offset_bottom = 75.0
theme_override_styles/panel = SubResource("StyleBoxEmpty_airu1")

[node name="PointsLabel" type="Label" parent="UI/Panel"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.0
offset_right = 47.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("12_shuu0")
theme_override_font_sizes/font_size = 25
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Collectable" parent="UI/Panel" instance=ExtResource("13_6pt6s")]
position = Vector2(39, 20)
scale = Vector2(2, 2)
collision_layer = 0
collision_mask = 0

[node name="CanvasLayer" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="PauseMenu" parent="CanvasLayer" instance=ExtResource("20_sqqna")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -226.0
offset_top = -139.5
offset_right = 48.0
offset_bottom = 139.5
grow_horizontal = 2
grow_vertical = 2

[node name="CanvasLayer2" type="CanvasLayer" parent="."]
unique_name_in_owner = true
visible = false

[node name="LoseMenu" parent="CanvasLayer2" instance=ExtResource("21_sdege")]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -137.0
offset_top = -139.5
offset_right = 137.0
offset_bottom = 139.5
grow_horizontal = 2
grow_vertical = 2
